Source/Alternet.UI.Pal/Api/GenericImage.Api.h

ALTERNET_UI_API c_bool GenericImage_LoadFileWithMimeType_(void* handle, const char16_t* name, const char16_t* mimetype, int index)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::LoadFileWithMimeType(handle, name, mimetype, index);
    });
}
ALTERNET_UI_API c_bool GenericImage_LoadStreamWithMimeType_(void* handle, void* stream, const char16_t* mimetype, int index)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::LoadStreamWithMimeType(handle, stream, mimetype, index);
    });
}
ALTERNET_UI_API c_bool GenericImage_SaveStreamWithMimeType_(void* handle, void* stream, const char16_t* mimetype)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SaveStreamWithMimeType(handle, stream, mimetype);
    });
}
ALTERNET_UI_API c_bool GenericImage_SaveFileWithBitmapType_(void* handle, const char16_t* name, int bitmapType)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SaveFileWithBitmapType(handle, name, bitmapType);
    });
}
ALTERNET_UI_API c_bool GenericImage_SaveFileWithMimeType_(void* handle, const char16_t* name, const char16_t* mimetype)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SaveFileWithMimeType(handle, name, mimetype);
    });
}
ALTERNET_UI_API c_bool GenericImage_SaveFile_(void* handle, const char16_t* name)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SaveFile(handle, name);
    });
}
ALTERNET_UI_API c_bool GenericImage_SaveStreamWithBitmapType_(void* handle, void* stream, int type)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SaveStreamWithBitmapType(handle, stream, type);
    });
}
ALTERNET_UI_API c_bool GenericImage_CanRead_(const char16_t* filename)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::CanRead(filename);
    });
}
ALTERNET_UI_API c_bool GenericImage_CanReadStream_(void* stream)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::CanReadStream(stream);
    });
}
ALTERNET_UI_API int GenericImage_GetDefaultLoadFlags_()
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetDefaultLoadFlags();
    });
}
ALTERNET_UI_API char16_t* GenericImage_GetImageExtWildcard_()
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(GenericImage::GetImageExtWildcard());
    });
}
ALTERNET_UI_API void GenericImage_AddHandler_(void* handler)
{
    MarshalExceptions<void>([&](){
        GenericImage::AddHandler(handler);
    });
}
ALTERNET_UI_API void GenericImage_CleanUpHandlers_()
{
    MarshalExceptions<void>([&](){
        GenericImage::CleanUpHandlers();
    });
}
ALTERNET_UI_API void* GenericImage_FindHandlerByName_(const char16_t* name)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::FindHandlerByName(name);
    });
}
ALTERNET_UI_API void* GenericImage_FindHandlerByExt_(const char16_t* extension, int bitmapType)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::FindHandlerByExt(extension, bitmapType);
    });
}
ALTERNET_UI_API void* GenericImage_FindHandlerByBitmapType_(int bitmapType)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::FindHandlerByBitmapType(bitmapType);
    });
}
ALTERNET_UI_API void* GenericImage_FindHandlerByMime_(const char16_t* mimetype)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::FindHandlerByMime(mimetype);
    });
}
ALTERNET_UI_API void GenericImage_InsertHandler_(void* handler)
{
    MarshalExceptions<void>([&](){
        GenericImage::InsertHandler(handler);
    });
}
ALTERNET_UI_API c_bool GenericImage_RemoveHandler_(const char16_t* name)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::RemoveHandler(name);
    });
}
ALTERNET_UI_API int GenericImage_GetImageCountInFile_(const char16_t* filename, int bitmapType)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetImageCountInFile(filename, bitmapType);
    });
}
ALTERNET_UI_API int GenericImage_GetImageCountInStream_(void* stream, int bitmapType)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetImageCountInStream(stream, bitmapType);
    });
}
ALTERNET_UI_API void* GenericImage_GetAlphaData_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::GetAlphaData(handle);
    });
}
ALTERNET_UI_API void* GenericImage_GetData_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::GetData(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_CreateData_(void* handle, int width, int height, void* data, c_bool static_data)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::CreateData(handle, width, height, data, static_data);
    });
}
ALTERNET_UI_API c_bool GenericImage_CreateAlphaData_(void* handle, int width, int height, void* data, void* alpha, c_bool static_data)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::CreateAlphaData(handle, width, height, data, alpha, static_data);
    });
}
ALTERNET_UI_API void GenericImage_SetAlphaData_(void* handle, void* alpha, c_bool static_data)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetAlphaData(handle, alpha, static_data);
    });
}
ALTERNET_UI_API void GenericImage_SetData_(void* handle, void* data, c_bool static_data)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetData(handle, data, static_data);
    });
}
ALTERNET_UI_API void GenericImage_SetDataWithSize_(void* handle, void* data, int new_width, int new_height, c_bool static_data)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetDataWithSize(handle, data, new_width, new_height, static_data);
    });
}
ALTERNET_UI_API void* GenericImage_LockBits_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::LockBits(handle);
    });
}
ALTERNET_UI_API int GenericImage_GetStride_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetStride(handle);
    });
}
ALTERNET_UI_API void GenericImage_UnlockBits_(void* handle)
{
    MarshalExceptions<void>([&](){
        GenericImage::UnlockBits(handle);
    });
}